objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>telugu</fullName>
                </value>
                <value>
                    <fullName>hindi</fullName>
                </value>
                <value>
                    <fullName>english</fullName>
                </value>
                <value>
                    <fullName>maths</fullName>
                </value>
                <value>
                    <fullName>science</fullName>
                </value>
                <value>
                    <fullName>social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>t-{000}</displayFormat>
        <label>Teacher id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>